--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.28.14",
+    "@web3modal/siwe": "^4.1.4",
+    "@web3modal/wagmi": "^4.1.4",
+    "mongoose": "^8.3.0",
+    "next": "14.1.4",
+    "pino-pretty": "^10.3.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "viem": "^2.9.8",
+    "wagmi": "^2.5.18"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "encoding": "^0.1.13",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
